[workspace]
members = [
  "rea-rs",
  "test/test",
  "test/test-extension-plugin",
  "test/test-extension-plugin-small",
  "test/test-vst-plugin",
]

[workspace.dependencies]
bitflags = "1.3"
c_str_macro = "1.0.2"
env_logger = "0.9"
int-enum = "0.5"
log = "0.4"
reaper-low = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-medium = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
rmp-serde = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bitvec = "1"
