[package]
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
categories = ["api-bindings", "multimedia", "multimedia::audio"]
description = "Bindings for the REAPER C++ API - macros"
edition = "2021"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
license = "MIT"
name = "rea-rs-macros"
readme = "../README.md"
repository = "https://github.com/levitanus/rea-rs"
version = "0.1.31"

[dependencies]
darling = "0.10.2"
quote = "1.0.2"
# rea-rs-low = {version = "0.1.2", path = "../low"}
syn = {version = "1.0.14", features = ["full"]}

[dev-dependencies]
doc-comment = "0.3.3"
rea-rs-low = {version = "0.1.3", path = "../low"}
version-sync = "0.9.2"
vst = "0.3"

[lib]
proc-macro = true
