[package]
authors = ["Timofei Kazantse aka Levitanus <pianoist@ya.ru>"]
description = "A rusty version of ReaScript API"
edition = "2021"
keywords = ["reaper", "daw", "plug-in", "audio", "midi"]
license = "MIT"
name = "rea-rs"
readme = "../README.md"
repository = "https://github.com/Levitanus/rea-rs"
version = "0.1.31"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
bitvec = "1"
c_str_macro = "1.0.2"
env_logger = "0.10"
int-enum = "0.5"
log = "0.4"
rea-rs-low = {version = "0.1.3", path = "../low"}
rmp-serde = "1.1"
serde = "1.0"
serde-pickle = "1.1"
serde_derive = "1.0"
serde_json = "1.0"
chrono = {version="0.4", features=["serde"]}
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.5"
anyhow = "1.0.8"

ws = "0.9.2"

[dev-dependencies]
rea-rs-macros = {version = "0.1.3", path = "../macros"}

[lib]
name = "rea_rs"
