[package]
edition = "2021"
name = "reaper-test-extension-plugin"
publish = false
version = "0.1.0"

[dependencies]
bitvec = "1.0"
c_str_macro = "1.0.2"
float_eq = "1.0"
log = "0.4"
rea-rs = {path = "../rea-rs"}
reaper-low = "0.1.0"
reaper-macros = "0.1.0"
reaper-medium = "0.1.0"
# reaper-test = {git = "https://github.com/Levitanus/reaper-test"}
reaper-test = {path = "../../reaper-test"}

[patch.crates-io]
reaper-low = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-macros = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-medium = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}

[lib]
crate-type = ["cdylib"]
name = "reaper_test_extension_plugin"
