[package]
authors = ["Timofei Kazantsev <pianoist@ya.ru>"]
edition = "2021"
name = "reaper-test-extension-plugin-small"
publish = false
version = "0.1.0"

[dependencies]
env_logger = {workspace = true}
log = {workspace = true}
rea-rs = {path = "../../rea-rs"}
reaper-low = {workspace = true}
reaper-macros = {workspace = true}

[lib]
crate-type = ["cdylib"]
name = "reaper_test_extension_plugin_small"
