[package]
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
name = "reaper-test-extension-plugin"
publish = false
version = "0.1.0"

[features]
default = ["run-reaper-integration-test"]

# Linux only: When testing with this feature enabled, REAPER will be fired up (a dedicated downloaded instance)
# executing the reaper-rs integration tests. Even works on headless systems.
run-reaper-integration-test = []

[dependencies]
c_str_macro = "1.0.2"
reaper-high = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-macros = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}

reaper-low = {workspace = true}
reaper-medium = {workspace = true}
# slog = "2.5.2"
env_logger = {workspace = true}
log = {workspace = true}
rea-rs = {path = "../../rea-rs"}
reaper-test = {path = "../test"}

[dev-dependencies]
fs_extra = "1.2.0"
reqwest = {version = "0.10", features = ["blocking"]}
tar = "0.4.26"
wait-timeout = "0.1.5"
xz2 = "0.1"

[lib]
crate-type = ["cdylib"]
name = "reaper_test_extension_plugin"
