[package]
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
name = "reaper-test"
publish = false
version = "0.1.0"

[dependencies]
approx = "0.3.2"
c_str_macro = "1.0.2"
crossbeam-channel = "0.5"
env_logger = {workspace = true}
helgoboss-midi = "0.4.0"
log = {workspace = true}
once_cell = "1.5.2"
rea-rs = {path = "../../rea-rs"}
reaper-high = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-low = {workspace = true}
reaper-medium = {workspace = true}
reaper-rx = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
rxrust = {git = "https://github.com/rxRust/rxRust", rev = "349e50b3197e05926e2378ef8fc45cb67ad43b83"}
slog = "2.5.2"
