[package]
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
name = "reaper-test"
publish = false
version = "0.1.0"

[dependencies]
approx = "0.5.1"
bitvec = {workspace = true}
c_str_macro = "1.0.2"
crossbeam-channel = "0.5"
env_logger = {workspace = true}
helgoboss-midi = "0.4.0"
log = {workspace = true}
once_cell = "1.5.2"
rea-rs = {path = "../../rea-rs"}
reaper-low = {workspace = true}
reaper-medium = {workspace = true}
